Style fix for text wrapping (not supposed to) in the storage amount bar

--- a/modules/mod_mysessions/mod_mysessions.css
+++ b/modules/mod_mysessions/mod_mysessions.css
@@ -15,23 +15,23 @@
 	div.draggable .expandedlist {
 		max-height: 300px;
 		overflow: auto;
-		}
+	}
 	div.draggable .expandedlist li {
 		position: relative;
-		}
+	}
 	div.draggable .expandedlist li.session {
 		background: url("/modules/mod_mysessions/images/application.png") 0.5em 0.7em no-repeat;
-		}
+	}
 	div.draggable .expandedlist li.shared {
 		background: url("/modules/mod_mysessions/images/application_double.png") 0.5em 1.2em no-repeat;
-		}
+	}
 	div.draggable .emphasis .expandedlist li {
 		border-color: #A0A0A0;
 		background-color: #A0A0A0;
-		}
+	}
 	div.draggable .emphasis .expandedlist li.even {
 		background-color: #909090;
-		}
+	}
 	div.draggable .expandedlist .disconnect,
 	div.draggable .expandedlist .closetool {
 		display: block;
@@ -43,47 +43,47 @@
 		text-indent: -55em;
 		border: none;
 		right: 10px;
-		}
+	}
 	div.draggable .expandedlist .disconnect {
 		background: url("/modules/mod_mysessions/images/disconnect.png") 0 0 no-repeat;
-		}
+	}
 	div.draggable .expandedlist .closetool {
 		background: url("/modules/mod_mysessions/images/stop.png") 0 0 no-repeat;
-		}
+	}
 	div.draggable .expandedlist .disconnect:hover,
 	div.draggable .expandedlist .closetool:hover {
 		background-position: 0 -16px;
-		}
+	}
 /* emphasis */
 	div.draggable .emphasis .expandedlist .disconnect {
 		width: 28px;
 		height: 14px;
 		background: url("/modules/mod_mysessions/images/disconnect_dark.gif") 0 0 no-repeat;
-		}
+	}
 	div.draggable .emphasis .expandedlist .closetool {
 		width: 14px;
 		height: 14px;
 		background: url("/modules/mod_mysessions/images/close.gif") 0 0 no-repeat;
-		}
+	}
 	div.draggable .emphasis .expandedlist .disconnect:hover,
 	div.draggable .emphasis .expandedlist .closetool:hover {
 		background-position: 0 -14px;
-		}
+	}
 	div.draggable .emphasis .expandedlist a:hover,
 	div.draggable .emphasis #diskusage a:hover {
 		color: #FF9966;
-		}
+	}
 /* Disk usage */
 	#diskusage { 
 		margin: 0;
 		padding: 0.5em 1em 0.1em 1em;
-		}
+	}
 	#diskusage dt {
 		color: #aaa;
-		}
+	}
 	.emphasis #diskusage dt {
 		color: #ccc;
-		}
+	}
 	#diskusage #du-amount { 
 		position: relative; /* IE is dumb */
 		display: block;
@@ -96,17 +96,17 @@
 		-webkit-border-radius: 10px;
 		-khtml-border-radius: 10px;	
 		border-radius: 10px;
-		}
+	}
 	.emphasis #diskusage #du-amount { 
 		background: #646464;
 		background: -webkit-gradient(linear, left top, left bottom, from(#646464), to(#868686));
 		background: -moz-linear-gradient(top,  #646464,  #868686);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#646464', endColorstr='#868686');
-		}
+	}
 	#diskusage #du-msg { 
 		margin: 0;
 		padding: 0;
-		}
+	}
 	#diskusage #du-amount span {
 		position: absolute;
 		top: 0;
@@ -114,16 +114,17 @@
 		line-height: 1.5em;
 		text-indent: 7px;
 		width: 95px;
-		}
+	}
 	.emphasis #diskusage #du-amount span {
 		color: #fff;
-		}
+	}
 	#diskusage #du-amount #du-amount-low {
 		margin-left: 100%;
-		}
+		white-space: nowrap;
+	}
 	#diskusage #du-amount #du-amount-high {
 		width: 96%;
-		}
+	}
 	#diskusage #du-amount div {
 		margin: 0;
 		padding: 0;
@@ -140,19 +141,19 @@
 		box-shadow: 0px 0px 2px #444;
 		-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5); /* length length length color */
 		-moz-box-shadow: #444 0px 0px 2px; /* color length length length */
-		}
+	}
 	#diskusage #du-amount.amount-low {
 		text-align: left;
-		}
+	}
 	#diskusage #du-amount.amount-high {
 		text-align: right;
-		}
+	}
 	.emphasis #diskusage #du-amount div {
 		background: #ccc; 
 		background: -webkit-gradient(linear, left top, left bottom, from(#cccccc), to(#aaaaaa));
 		background: -moz-linear-gradient(top,  #cccccc,  #aaaaaa);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#aaaaaa');
-		}
+	}
 	#diskusage #du-amount div strong {
 		position: absolute;
 		right: -5px;
@@ -163,17 +164,17 @@
 		text-align: left;
 		text-indent: -9999px;
 		overflow: hidden;
-		}
+	}
 /* Admin view */
 	div.draggable .session_tab_panel {
 		display: none;
 		position: relative;
 		padding: 0;
 		margin: 0;
-		}
+	}
 	div.draggable .session_tab_panel.active {
 		display: block;
-		}
+	}
 	div.draggable .session_tab_titles {
 		list-style-image: none;
 		list-style-type: none;
@@ -181,7 +182,7 @@
 		padding: 4px 0 0 4px;
 		height: 24px;
 		background: #333;
-		}
+	}
 	div.draggable .session_tab_titles li {
 		float: left;
 		background-color: #656565;
@@ -194,16 +195,16 @@
 		color: #fff;
 		font-weight: bold;
 		background-image: none;
-		}
+	}
 	div.draggable .session_tab_titles li.active {
 		background-color: #fff;
 		color: #333;
-		}
+	}
 	div.draggable .emphasis .session_tab_titles li {
 		background-color: #555;
 		color: #ccc;
-		}
+	}
 	div.draggable .emphasis .session_tab_titles li.active {
 		background-color: #909090;
 		color: #fff;
-		}
+	}
